UserScore index added
